<resources>
    <string name="app_name">Sigma Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_point_of_sale">Point of Sales</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="act_product">Ketik produk</string>
    <string name="hint_product_price">Harga Produk</string>
    <string name="hint_qty">Qty</string>
    <string name="hint_disc">Disc(%)</string>
    <string name="hint_disc_nusantara_value">Diskon Nusantara</string>
    <string name="hint_disc_principal_value">Diskon Principal</string>
    <string name="tab_order">Order</string>
    <string name="tab_order_product">Product</string>
    <string name="tab_list_so">List SO</string>
    <string name="tab_product_return">Retur</string>
    <string name="no">No.</string>
    <string name="header_product">Produk</string>
    <string name="harga_list_rp">Harga\nList, Rp.</string>
    <string name="jumlah">Jumlah\nOrder</string>
    <string name="discount_nusantara">Discount Nusantara</string>
    <string name="persen">%</string>
    <string name="nilai">Nilai, Rp.</string>
    <string name="discount_principal">Discount Principal</string>
    <string name="sub_total">Sub Total\nOrder, Rp.</string>
    <string name="error_input_product">PRODUK TIDAK TERSEDIA</string>
    <string name="error_input_qty">QTY TIDAK BOLEH KOSONG</string>
    <string name="error_input_qty_and_stock">Stok Produk kurang dari QTY</string>
    <string name="hint_subtotal">Sub Total</string>
    <string name="error_input_disc">Tolong Isi Diskon</string>
    <string name="agree">Iya</string>
    <string name="disagree">Batal</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>

    <string-array name="menus">
        <item>Target</item>
        <item>Daftar\nPelunasan</item>
        <item>Upload\nData</item>
        <item>Struktur\nData\n(Master &amp; Stok)</item>
        <item>OSC</item>
        <item>Back\nOffice</item>
    </string-array>

    <string-array name="icon_menus">
        <item>@drawable/ic_trending_up_white_48dp</item>
        <item>@drawable/ic_assignment_white_48dp</item>
        <item>@drawable/ic_file_upload_white_48dp</item>
        <item>@drawable/ic_folder_open_white_48dp</item>
        <item>@drawable/ic_people_outline_white_48dp</item>
        <item>@drawable/ic_business_white_48dp</item>
    </string-array>

    <string-array name="sub_menus_osc">
        <item>Scan Barcode</item>
        <item>Registered Outlet</item>
        <item>New Outlet</item>
    </string-array>

    <string-array name="icon_sub_menu_osc">
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
    </string-array>

    <string-array name="sub_menu_c_ro">
        <item>Saran\nOrder</item>
        <item>Piutang\nOutlet</item>
        <item>POS</item>
        <item>SO</item>
        <item>Retur\nProduct</item>
    </string-array>

    <string-array name="icon_sub_menu_c_ro">
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
        <item>@drawable/ic_android_white_48dp</item>
    </string-array>

    <string-array name="type_of_price">
        <item>PO Price</item>
        <item>Selling Price</item>
        <item>Base Price (Whole Seller)</item>
        <item>Old Price</item>
        <item>Test Price (Snack Super mkt)</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_doc_no">Doc No</string>
    <string name="hint_po_date">Purchase Order Date</string>
    <string name="tag_date_picker_dialog">Datepickerdialog</string>
    <string name="hint_warehouse">Warehouse</string>
    <string name="hint_salesman">Salesman</string>
    <string name="hint_outlet">Ketik Outlet</string>
    <string name="error_input_outlet">OUTLET TIDAK TERSEDIA</string>
    <string name="error_input_salesman">SALESMAN TIDAK TERSEDIA</string>
    <string name="error_input_doc_no">DOC NO TIDAK BOLEH KOSONG</string>
    <string name="error_input_doc_date">TANGGAL TIDAK BOLEH KOSONG</string>
    <string name="error_input_rute">RUTE TIDAK BOLEH KOSONG</string>
    <string name="error_input_doc_no_duplicate">DOCNO SUDAH ADA</string>
    <string name="action_done">Order Done</string>
    <string name="hint_input_total">TOTAL</string>
    <string name="hint_input_bonus">BONUS</string>
    <string name="hint_input_grand_total">GRAND TOTAL</string>
    <string name="title_dialog_order">TOTAL POS</string>
    <string name="tab_order_done">PAID OFF</string>
    <string name="title_activity_sub_menu_osc">OSC</string>
    <string name="title_activity_osc">OSC</string>
    <string name="title_activity_choose_ro">Outlet Service Call</string>
    <string name="title_activity_retur_produk">Retur Produk</string>
    <string name="hint_pcs">Pcs</string>
    <string name="hint_cart">Cart</string>
    <string name="text_rb_ambil">Ambil</string>
    <string name="text_rb_proses">Proses</string>
    <string name="hint_ket">Keterangan</string>
    <string name="quantity">Quantity</string>
    <string name="pcs">Pcs</string>
    <string name="cart">Cart</string>
    <string name="status">Status</string>
    <string name="ambil">Ambil</string>
    <string name="proses">Proses</string>
    <string name="title_location_dialog">GPS</string>
    <string name="content_location_dialog">GPS pada handhel ini tidak aktif, apakah anda akan mengaktifkannya?</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_customer">Registered Outlet</string>
    <string name="id">ID.</string>
    <string name="name">Nama</string>
    <string name="search">Cari Disini …</string>
    <string name="title_activity_sales_order">Sales Order</string>
    <string name="hint_customer">Customer</string>
    <string name="title_activity_splash_screen">SIGMA</string>
    <string name="title_activity_login">Login</string>
    <string name="header_unit">Unit</string>
    <string name="hint_input_bayar">BAYAR</string>
    <string name="hint_input_kembali">KEMBALI</string>
    <string name="hint_invoice">Invoice</string>
    <string name="hint_del_date">Delivery Date</string>
    <string name="hint_sales_order">Sales Order</string>
    <string name="hint_customer_po">Customer\'s PO</string>
    <string name="tab_prepare">Prepare Order</string>
    <string name="title_activity_activity_test">Activity Test</string>
    <string name="title_activity_outlet">Registered Outlets</string>
    <string name="title_activity_new_outlet">New Outlet</string>
</resources>