<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="30dp"
                      android:text="@string/no"/>

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="150dp"
                      android:text="@string/header_product"/>

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="100dp"
                      android:text="@string/header_unit"/>

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="90dp"
                      android:layout_gravity="center"
                      android:text="@string/harga_list_rp" />

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="70dp"
                      android:layout_gravity="center"
                      android:text="@string/jumlah" />

            <TextView style="@style/DefaultHeaderDone"
                      android:layout_width="120dp"
                      android:layout_gravity="center"
                      android:layout_marginRight="0dp"
                      android:text="@string/sub_total"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_do_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:id="@+id/ll_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:background="#333333"
            android:orientation="horizontal">

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Total "/>

            <EditText
                android:id="@+id/et_total"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="right"
                android:paddingRight="16dp"/>

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>